force-app/main/default/objects/Opportunity/fields/firstCpnSource__c.field-meta.xml
<CustomField>
    <fullName>firstCpnSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ファーストタッチCPN(ソース)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.cpnType__c</field>
            <operation>equals</operation>
            <value>ソース</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>ファーストタッチCPN商談(ソース)</relationshipLabel>
    <relationshipName>opp_firstCpnSource</relationshipName>
    <type>Lookup</type>
</CustomField>