force-app/main/default/objects/Opportunity/fields/From_Budget__c.field-meta.xml
<CustomField>
    <fullName>From_Budget__c</fullName>
    <label>From_予算組み込み</label>
    <type>Date</type>
</CustomField>