force-app/main/default/objects/Opportunity/fields/GeneralContractor__c.field-meta.xml
<CustomField>
    <fullName>GeneralContractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ゼネコン</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>商談 (ゼネコン)</relationshipLabel>
    <relationshipName>OppGeneralContractor</relationshipName>
    <type>Lookup</type>
</CustomField>