force-app/main/default/objects/Opportunity/fields/GrossProfitTarget__c.field-meta.xml
<CustomField>
    <fullName>GrossProfitTarget__c</fullName>
    <label>粗利目標</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>