force-app/main/default/objects/Opportunity/fields/InstallationTeamOrderUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>InstallationTeamOrderUnitPrice__c</fullName>
    <label>取付班発注単価</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>