force-app/main/default/objects/Opportunity/fields/isCompletionDelayNotified__c.field-meta.xml
<CustomField>
    <fullName>isCompletionDelayNotified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>竣工日超過通知済flg</label>
    <type>Checkbox</type>
</CustomField>