force-app/main/default/objects/Opportunity/fields/isOrderInCurrentPeriod__c.field-meta.xml
<CustomField>
    <fullName>isOrderInCurrentPeriod__c</fullName>
    <formula>IF(
    OR(
        AND(
            MONTH(en_zyutyuubi__c) &gt;= 7,
            YEAR(en_zyutyuubi__c) = YEAR(TODAY())
        ),
        AND(
            MONTH(en_zyutyuubi__c) &lt; 7,
            YEAR(en_zyutyuubi__c) = YEAR(TODAY()) + 1
        )
    ),
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>当期受注flg</label>
    <type>Checkbox</type>
</CustomField>