force-app/main/default/objects/Opportunity/fields/isOrderInCurrentPeriodForTotal__c.field-meta.xml
<CustomField>
    <fullName>isOrderInCurrentPeriodForTotal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>当期受注flg(*積み上げ集計用)</label>
    <type>Checkbox</type>
</CustomField>