force-app/main/default/objects/Opportunity/fields/isSalesInCurrentPeriod__c.field-meta.xml
<CustomField>
    <fullName>isSalesInCurrentPeriod__c</fullName>
    <formula>IF(
    OR(
        AND(
            MONTH(en_uriagebi__c) &gt;= 7,
            YEAR(en_uriagebi__c) = YEAR(TODAY())
        ),
        AND(
            MONTH(en_uriagebi__c) &lt; 7,
            YEAR(en_uriagebi__c) = YEAR(TODAY()) + 1
        )
    ),
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>当期売上flg</label>
    <type>Checkbox</type>
</CustomField>