force-app/main/default/objects/Opportunity/fields/isSalesInCurrentPeriodForTotal__c.field-meta.xml
<CustomField>
    <fullName>isSalesInCurrentPeriodForTotal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>当期売上flg(*積み上げ集計用)</label>
    <type>Checkbox</type>
</CustomField>