force-app/main/default/objects/Opportunity/fields/IssueFlag__c.field-meta.xml
<CustomField>
    <fullName>IssueFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>課題ヒアリング由来</label>
    <type>Checkbox</type>
</CustomField>