force-app/main/default/objects/Opportunity/fields/isViaWebChannel__c.field-meta.xml
<CustomField>
    <fullName>isViaWebChannel__c</fullName>
    <formula>OR( 
tName__r.SL_source_request_documents__c ,
tName__r.SL_source_demo__c,
tName__r.SL_WebContact__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WEB経由flg</label>
    <type>Checkbox</type>
</CustomField>