force-app/main/default/objects/Opportunity/fields/JU_6category_keitenzai__c.field-meta.xml
<CustomField>
    <fullName>JU_6category_keitenzai__c</fullName>
    <defaultValue>false</defaultValue>
    <label>6カテゴリ提案用商談_軽天材</label>
    <type>Checkbox</type>
</CustomField>