force-app/main/default/objects/Opportunity/fields/JU_6category_sekkouboard__c.field-meta.xml
<CustomField>
    <fullName>JU_6category_sekkouboard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>6カテゴリ提案用商談_石膏ボード</label>
    <type>Checkbox</type>
</CustomField>