force-app/main/default/objects/Opportunity/fields/JU_Account_Department__c.field-meta.xml
<CustomField>
    <fullName>JU_Account_Department__c</fullName>
    <formula>Account.JU_Department__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>担当部署_JU（取引先）</label>
    <type>Text</type>
</CustomField>