force-app/main/default/objects/Opportunity/fields/JU_AmountStack__c.field-meta.xml
<CustomField>
    <fullName>JU_AmountStack__c</fullName>
    <description>提案商品オブジェクトの年間想定金額を積上げ</description>
    <label>金額（積み上げ）</label>
    <summarizedField>JU_ProposedProduct__c.EstimatedAnnualAmount__c</summarizedField>
    <summaryForeignKey>JU_ProposedProduct__c.Oppotunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>