force-app/main/default/objects/Opportunity/fields/JU_bpo_lostday__c.field-meta.xml
<CustomField>
    <fullName>JU_bpo_lostday__c</fullName>
    <label>不採用日</label>
    <type>Date</type>
</CustomField>