force-app/main/default/objects/Opportunity/fields/JU_bpo_Proposalstopday__c.field-meta.xml
<CustomField>
    <fullName>JU_bpo_Proposalstopday__c</fullName>
    <label>提案停止日</label>
    <type>Date</type>
</CustomField>