force-app/main/default/objects/Opportunity/fields/JU_BPOhasei__c.field-meta.xml
<CustomField>
    <fullName>JU_BPOhasei__c</fullName>
    <defaultValue>false</defaultValue>
    <label>作図積算BPO提案由来</label>
    <type>Checkbox</type>
</CustomField>