force-app/main/default/objects/Opportunity/fields/JU_CancelDate__c.field-meta.xml
<CustomField>
    <fullName>JU_CancelDate__c</fullName>
    <label>検討保留日</label>
    <type>Date</type>
</CustomField>