force-app/main/default/objects/Opportunity/fields/JU_category__c.field-meta.xml
<CustomField>
    <fullName>JU_category__c</fullName>
    <label>6カテゴリ種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01.基礎資材_生コン</fullName>
            </value>
            <value>
                <fullName>02.基礎資材_鉄筋</fullName>
            </value>
            <value>
                <fullName>03.構造材</fullName>
            </value>
            <value>
                <fullName>04.断熱材</fullName>
            </value>
            <value>
                <fullName>05.石膏ボード</fullName>
            </value>
            <value>
                <fullName>06.鋼製下地</fullName>
            </value>
            <value>
                <fullName>07.外構</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>