force-app/main/default/objects/Opportunity/fields/JU_closereason__c.field-meta.xml
<CustomField>
    <fullName>JU_closereason__c</fullName>
    <label>採用/提案停止/検討保留時項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>