force-app/main/default/objects/Opportunity/fields/JU_Contact__c.field-meta.xml
<CustomField>
    <fullName>JU_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>購買決定者</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.KeyMan__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>商談 (購買決定者)</relationshipLabel>
    <relationshipName>JU_ContactOpps</relationshipName>
    <type>Lookup</type>
</CustomField>