force-app/main/default/objects/Opportunity/fields/JU_costdown__c.field-meta.xml
<CustomField>
    <fullName>JU_costdown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>コストダウン</label>
    <type>Checkbox</type>
</CustomField>