force-app/main/default/objects/Opportunity/fields/JU_costdownteian__c.field-meta.xml
<CustomField>
    <fullName>JU_costdownteian__c</fullName>
    <defaultValue>false</defaultValue>
    <label>コストダウン提案</label>
    <type>Checkbox</type>
</CustomField>