force-app/main/default/objects/Opportunity/fields/JU_DepartmentKGI__c.field-meta.xml
<CustomField>
    <fullName>JU_DepartmentKGI__c</fullName>
    <label>採用（受注）時担当部署</label>
    <length>100</length>
    <type>Text</type>
</CustomField>