force-app/main/default/objects/Opportunity/fields/JU_EmploymentAmountStack__c.field-meta.xml
<CustomField>
    <fullName>JU_EmploymentAmountStack__c</fullName>
    <description>提案商品オブジェクトの採用金額を積上げ</description>
    <label>採用金額（積上げ）</label>
    <summarizedField>JU_ProposedProduct__c.EmploymentAmount__c</summarizedField>
    <summaryForeignKey>JU_ProposedProduct__c.Oppotunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>