force-app/main/default/objects/Opportunity/fields/JU_ExpectedRevenue_Actual__c.field-meta.xml
<CustomField>
    <fullName>JU_ExpectedRevenue_Actual__c</fullName>
    <formula>IF (  RecordType.DeveloperName = &apos;Jukankyo&apos;
,IF (    ISPICKVAL(StageName, &apos;採用（受注）&apos;)  
,ju_shyoudan_saiyoukingaku__c
,Amount *  JU_zyutyuukakudo__c)
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>期待収益_JU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>