force-app/main/default/objects/Opportunity/fields/JU_F_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>JU_F_Accuracy__c</fullName>
    <formula>CASE( TEXT( StageName  ) 
						, &apos;未着手&apos;, 0
                                                , &apos;停滞保留中&apos;, 0.10
						, &apos;訪問1回目&apos;, 0.13
						, &apos;初回見積提出&apos;, 0.19
						, &apos;購買決定者検討中&apos;, 0.50
						, &apos;トライアル&apos;, 0.58
						, &apos;検討保留&apos;, 0
                                                , &apos;採用一歩手前&apos;, 0.80
						, &apos;採用（受注）&apos;, 1
						, &apos;不採用&apos;, 0
						,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>F確度</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>