force-app/main/default/objects/Opportunity/fields/JU_FirstVisitDate__c.field-meta.xml
<CustomField>
    <fullName>JU_FirstVisitDate__c</fullName>
    <label>訪問1回目日</label>
    <type>Date</type>
</CustomField>