force-app/main/default/objects/Opportunity/fields/JU_GetAmount__c.field-meta.xml
<CustomField>
    <fullName>JU_GetAmount__c</fullName>
    <description>住環境商談の初回見積以降の金額のみを抽出。レポート用項目。</description>
    <formula>if( AND(NOT(TEXT(StageName)=&quot;訪問1回目&quot;),RecordType.DeveloperName = &quot;Jukankyo&quot;), Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*獲得提案金額（千円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>