force-app/main/default/objects/Opportunity/fields/JU_katsudoukaisibi__c.field-meta.xml
<CustomField>
    <fullName>JU_katsudoukaisibi__c</fullName>
    <label>活動開始日</label>
    <type>Date</type>
</CustomField>