force-app/main/default/objects/Opportunity/fields/JU_KGI__c.field-meta.xml
<CustomField>
    <fullName>JU_KGI__c</fullName>
    <formula>IF(   RecordType.DeveloperName = &apos;JU_Plan&apos;
			, JU_PlanAmount__c/2
			,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KGI計画額_JU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>