force-app/main/default/objects/Opportunity/fields/JU_KMpurezenkanryoubi__c.field-meta.xml
<CustomField>
    <fullName>JU_KMpurezenkanryoubi__c</fullName>
    <label>KMプレゼン完了日</label>
    <type>Date</type>
</CustomField>