force-app/main/default/objects/Opportunity/fields/JU_LastActivityContent__c.field-meta.xml
<CustomField>
    <fullName>JU_LastActivityContent__c</fullName>
    <label>最終活動内容</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>