force-app/main/default/objects/Opportunity/fields/JU_LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>JU_LastActivityDate__c</fullName>
    <formula>MIN(StageStagnantDays__c,JU_lastactivityday_today__c,JU_StageStagnantDaysDiff__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>移行までの日数_JU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>