force-app/main/default/objects/Opportunity/fields/JU_lastactivityday_today__c.field-meta.xml
<CustomField>
    <fullName>JU_lastactivityday_today__c</fullName>
    <formula>TODAY() - if( ISBLANK(LastActivityDate)
, DATEVALUE(CreatedDate)
, LastActivityDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最終活動日からの経過日数_JU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>