force-app/main/default/objects/Opportunity/fields/ju_mitsumoriup__c.field-meta.xml
<CustomField>
    <fullName>ju_mitsumoriup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>見積のアップロードを徹底するため、「初回見積もり提出」フェーズに変更前にチェックをいれないと保存ができないようにする</description>
    <label>見積アップロード</label>
    <type>Checkbox</type>
</CustomField>