force-app/main/default/objects/Opportunity/fields/JU_mityakusyubi__c.field-meta.xml
<CustomField>
    <fullName>JU_mityakusyubi__c</fullName>
    <label>未着手日</label>
    <type>Date</type>
</CustomField>