force-app/main/default/objects/Opportunity/fields/JU_mokuhyouhoumonkensu__c.field-meta.xml
<CustomField>
    <fullName>JU_mokuhyouhoumonkensu__c</fullName>
    <label>目標訪問件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>