force-app/main/default/objects/Opportunity/fields/JU_mokuhyousyoudansakuseisuu__c.field-meta.xml
<CustomField>
    <fullName>JU_mokuhyousyoudansakuseisuu__c</fullName>
    <label>目標商談作成数</label>
    <length>255</length>
    <type>Text</type>
</CustomField>