force-app/main/default/objects/Opportunity/fields/Ju_nengappi2__c.field-meta.xml
<CustomField>
    <fullName>Ju_nengappi2__c</fullName>
    <formula>TEXT ( YEAR (JU_SuggestionDate__c) ) &amp; &quot;年&quot; &amp; TEXT ( MONTH (JU_SuggestionDate__c)) &amp; &quot;月&quot;</formula>
    <label>年月日（提案日）</label>
    <type>Text</type>
</CustomField>