force-app/main/default/objects/Opportunity/fields/Ju_nengetsu1__c.field-meta.xml
<CustomField>
    <fullName>Ju_nengetsu1__c</fullName>
    <formula>TEXT ( YEAR (CloseDate) ) &amp; &quot;年&quot; &amp; TEXT ( MONTH (CloseDate)) &amp; &quot;月&quot;</formula>
    <label>年月（完了予定）</label>
    <type>Text</type>
</CustomField>