force-app/main/default/objects/Opportunity/fields/JU_OneStepDate__c.field-meta.xml
<CustomField>
    <fullName>JU_OneStepDate__c</fullName>
    <label>採用一歩手前日</label>
    <type>Date</type>
</CustomField>