force-app/main/default/objects/Opportunity/fields/JU_OppAmount__c.field-meta.xml
<CustomField>
    <fullName>JU_OppAmount__c</fullName>
    <formula>IF ( RecordType.DeveloperName = &apos;Jukankyo&apos;
,IF ( ISPICKVAL(StageName, &apos;採用（受注）&apos;)
,ju_shyoudan_saiyoukingaku__c
  ,Amount__c)
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談金額_JU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>