force-app/main/default/objects/Opportunity/fields/JU_OppExternalKey__c.field-meta.xml
<CustomField>
    <fullName>JU_OppExternalKey__c</fullName>
    <externalId>true</externalId>
    <label>住環境用取込（外部キー)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>