force-app/main/default/objects/Opportunity/fields/JU_Phase1dounyubi__c.field-meta.xml
<CustomField>
    <fullName>JU_Phase1dounyubi__c</fullName>
    <label>Phase1導入日</label>
    <type>Date</type>
</CustomField>