force-app/main/default/objects/Opportunity/fields/JU_PlanEmploymentAmount__c.field-meta.xml
<CustomField>
    <fullName>JU_PlanEmploymentAmount__c</fullName>
    <label>*計画採用金額（千円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>