force-app/main/default/objects/Opportunity/fields/JU_PlanPoint__c.field-meta.xml
<CustomField>
    <fullName>JU_PlanPoint__c</fullName>
    <description>住環境計画の提案ポイントのみを抽出。レポート用項目。</description>
    <formula>if(  RecordType.DeveloperName = &quot;JU_Plan&quot;,   JU_ProposalPoints__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*計画提案ポイント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>