force-app/main/default/objects/Opportunity/fields/JU_ProgressComment__c.field-meta.xml
<CustomField>
    <fullName>JU_ProgressComment__c</fullName>
    <label>進捗状況コメント</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>