force-app/main/default/objects/Opportunity/fields/JU_ProposalPoints__c.field-meta.xml
<CustomField>
    <fullName>JU_ProposalPoints__c</fullName>
    <description>提案ポイント算出用項目</description>
    <formula>Amount  / 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>提案ポイント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>