force-app/main/default/objects/Opportunity/fields/JU_PurchaseDecisionDate__c.field-meta.xml
<CustomField>
    <fullName>JU_PurchaseDecisionDate__c</fullName>
    <label>購買決定者検討中日</label>
    <type>Date</type>
</CustomField>