force-app/main/default/objects/Opportunity/fields/JU_ReasonForClose__c.field-meta.xml
<CustomField>
    <fullName>JU_ReasonForClose__c</fullName>
    <label>採用/不採用/検討保留理由欄</label>
    <type>TextArea</type>
</CustomField>