force-app/main/default/objects/Opportunity/fields/JU_RecruitmentAmount__c.field-meta.xml
<CustomField>
    <fullName>JU_RecruitmentAmount__c</fullName>
    <description>住環境商談の採用（受注）の採用金額のみを抽出。レポート用項目。</description>
    <formula>if( AND(TEXT(StageName)=&quot;採用（受注）&quot;,RecordType.DeveloperName = &quot;Jukankyo&quot;), JU_EmploymentAmountStack__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*獲得採用金額（千円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>