force-app/main/default/objects/Opportunity/fields/JU_saisyuteiankanryobi__c.field-meta.xml
<CustomField>
    <fullName>JU_saisyuteiankanryobi__c</fullName>
    <label>最終提案完了日</label>
    <type>Date</type>
</CustomField>