force-app/main/default/objects/Opportunity/fields/JU_Saiyoubi__c.field-meta.xml
<CustomField>
    <fullName>JU_Saiyoubi__c</fullName>
    <label>採用日</label>
    <type>Date</type>
</CustomField>