force-app/main/default/objects/Opportunity/fields/JU_saiyouhusaiyoumeisai__c.field-meta.xml
<CustomField>
    <fullName>JU_saiyouhusaiyoumeisai__c</fullName>
    <label>採用・不採用明細</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>コストメリット無し</fullName>
            </value>
            <value>
                <fullName>既存商流維持</fullName>
            </value>
            <value>
                <fullName>競合他社提案優位</fullName>
            </value>
            <value>
                <fullName>現在検討の余地無し</fullName>
            </value>
            <value>
                <fullName>材工分離不可</fullName>
            </value>
            <value>
                <fullName>単品商材での支給化不可</fullName>
            </value>
            <value>
                <fullName>メーカー切替え</fullName>
            </value>
            <value>
                <fullName>材工分離</fullName>
            </value>
            <value>
                <fullName>材工分離/品質管理</fullName>
            </value>
            <value>
                <fullName>積算</fullName>
            </value>
            <value>
                <fullName>省施工化/工期短縮</fullName>
            </value>
            <value>
                <fullName>トータル受注</fullName>
            </value>
            <value>
                <fullName>クレーム削減</fullName>
            </value>
            <value>
                <fullName>メンテナンスフリー</fullName>
            </value>
            <value>
                <fullName>意匠性</fullName>
            </value>
            <value>
                <fullName>一括納材</fullName>
            </value>
            <value>
                <fullName>加工/PC</fullName>
            </value>
            <value>
                <fullName>業者紹介</fullName>
            </value>
            <value>
                <fullName>支給化</fullName>
            </value>
            <value>
                <fullName>手間削減</fullName>
            </value>
            <value>
                <fullName>住宅性能向上</fullName>
            </value>
            <value>
                <fullName>商流（与信）</fullName>
            </value>
            <value>
                <fullName>人間関係</fullName>
            </value>
            <value>
                <fullName>断熱性能向上</fullName>
            </value>
            <value>
                <fullName>複数購買</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>2024/7/24更新分</fullName>
            </value>
            <value>
                <fullName>提案不可</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>