force-app/main/default/objects/Opportunity/fields/ju_shoudan_housingouibi__c.field-meta.xml
<CustomField>
    <fullName>ju_shoudan_housingouibi__c</fullName>
    <label>方針合意日</label>
    <type>Date</type>
</CustomField>