force-app/main/default/objects/Opportunity/fields/JU_sintyokuzyoukyoucomment__c.field-meta.xml
<CustomField>
    <fullName>JU_sintyokuzyoukyoucomment__c</fullName>
    <label>進捗状況コメント</label>
    <type>TextArea</type>
</CustomField>