force-app/main/default/objects/Opportunity/fields/JU_StageStagnantDaysDiff__c.field-meta.xml
<CustomField>
    <fullName>JU_StageStagnantDaysDiff__c</fullName>
    <formula>TODAY() - if( ISBLANK(JU_teitaimeisai_date__c)
, DATEVALUE(CreatedDate)
, JU_teitaimeisai_date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>状況明細入力経過日数_JU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>