force-app/main/default/objects/Opportunity/fields/JU_StaPendingDate__c.field-meta.xml
<CustomField>
    <fullName>JU_StaPendingDate__c</fullName>
    <label>停滞保留中日</label>
    <type>Date</type>
</CustomField>