force-app/main/default/objects/Opportunity/fields/JU_SuggestionDate__c.field-meta.xml
<CustomField>
    <fullName>JU_SuggestionDate__c</fullName>
    <description>住環境の見積提出日、売上計画の完了予定日を提案日として対比するレポート用項目</description>
    <formula>IF (  RecordType.DeveloperName =&quot;Jukankyo&quot;,  FirstEstimates__c ,  CloseDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*提案日</label>
    <type>Date</type>
</CustomField>