force-app/main/default/objects/Opportunity/fields/JU_syokaihoumonbi__c.field-meta.xml
<CustomField>
    <fullName>JU_syokaihoumonbi__c</fullName>
    <label>初回訪問日</label>
    <type>Date</type>
</CustomField>