force-app/main/default/objects/Opportunity/fields/ju_syoudan_bunnrui_kizonsyouhinkaitei__c.field-meta.xml
<CustomField>
    <fullName>ju_syoudan_bunnrui_kizonsyouhinkaitei__c</fullName>
    <label>分類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>仕様変更</fullName>
            </value>
            <value>
                <fullName>価格改定</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>