force-app/main/default/objects/Opportunity/fields/ju_syoudan_kanryoubi__c.field-meta.xml
<CustomField>
    <fullName>ju_syoudan_kanryoubi__c</fullName>
    <label>完了日</label>
    <type>Date</type>
</CustomField>