force-app/main/default/objects/Opportunity/fields/ju_syoudan_kuremubunrui__c.field-meta.xml
<CustomField>
    <fullName>ju_syoudan_kuremubunrui__c</fullName>
    <label>分類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>顧客要望</fullName>
            </value>
            <value>
                <fullName>当社要望</fullName>
            </value>
            <value>
                <fullName>仕入先要望</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>