force-app/main/default/objects/Opportunity/fields/ju_syoudan_sintyokuzyoukyoucomment__c.field-meta.xml
<CustomField>
    <fullName>ju_syoudan_sintyokuzyoukyoucomment__c</fullName>
    <label>進捗状況コメント</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>