force-app/main/default/objects/Opportunity/fields/ju_syoudan_syokaimousiirebi__c.field-meta.xml
<CustomField>
    <fullName>ju_syoudan_syokaimousiirebi__c</fullName>
    <label>初回申し入れ日</label>
    <type>Date</type>
</CustomField>