force-app/main/default/objects/Opportunity/fields/JU_syouenekonsaru__c.field-meta.xml
<CustomField>
    <fullName>JU_syouenekonsaru__c</fullName>
    <defaultValue>false</defaultValue>
    <label>省エネコンサル提案</label>
    <type>Checkbox</type>
</CustomField>