force-app/main/default/objects/Opportunity/fields/JU_syousekouteian__c.field-meta.xml
<CustomField>
    <fullName>JU_syousekouteian__c</fullName>
    <defaultValue>false</defaultValue>
    <label>省施工提案</label>
    <type>Checkbox</type>
</CustomField>