force-app/main/default/objects/Opportunity/fields/JU_teitaimeisai__c.field-meta.xml
<CustomField>
    <fullName>JU_teitaimeisai__c</fullName>
    <label>状況明細</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>次のアポが取れない</fullName>
            </value>
            <value>
                <fullName>野原社内要検討</fullName>
            </value>
            <value>
                <fullName>資料入手待ち</fullName>
            </value>
            <value>
                <fullName>仕入先打合せ中</fullName>
            </value>
            <value>
                <fullName>他部署再提案中</fullName>
            </value>
            <value>
                <fullName>得意先社内確認中</fullName>
            </value>
            <value>
                <fullName>訪問1回目停滞中</fullName>
            </value>
            <value>
                <fullName>見積提出停滞中</fullName>
            </value>
            <value>
                <fullName>購買決定者検討停滞中</fullName>
            </value>
            <value>
                <fullName>トライアル停滞中</fullName>
            </value>
            <value>
                <fullName>採用一歩手前停滞中</fullName>
            </value>
            <value>
                <fullName>提案内容再検討</fullName>
            </value>
            <value>
                <fullName>仕入先交渉中</fullName>
            </value>
            <value>
                <fullName>仕入先へ見積依頼</fullName>
            </value>
            <value>
                <fullName>野原社内調整</fullName>
            </value>
            <value>
                <fullName>競合調査</fullName>
            </value>
            <value>
                <fullName>先方社内調整中</fullName>
            </value>
            <value>
                <fullName>得意先仕組検討中</fullName>
            </value>
            <value>
                <fullName>検討後結果報告待ち</fullName>
            </value>
            <value>
                <fullName>検討後追加要望</fullName>
            </value>
            <value>
                <fullName>野原からの回答待ち</fullName>
            </value>
            <value>
                <fullName>工期確認中</fullName>
            </value>
            <value>
                <fullName>最終仕様検討中</fullName>
            </value>
            <value>
                <fullName>進行中</fullName>
            </value>
            <value>
                <fullName>物件選定中</fullName>
            </value>
            <value>
                <fullName>問題発生</fullName>
            </value>
            <value>
                <fullName>設計折り込み待ち</fullName>
            </value>
            <value>
                <fullName>納入開始時期の検討</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>