force-app/main/default/objects/Opportunity/fields/JU_teitaimeisai_date__c.field-meta.xml
<CustomField>
    <fullName>JU_teitaimeisai_date__c</fullName>
    <label>状況明細入力日_JU</label>
    <type>Date</type>
</CustomField>