force-app/main/default/objects/Opportunity/fields/JU_teitainissu__c.field-meta.xml
<CustomField>
    <fullName>JU_teitainissu__c</fullName>
    <formula>TODAY() - DATEVALUE(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>浸透計測用_商談停滞日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>