force-app/main/default/objects/Opportunity/fields/JU_tokuisakikentoubi__c.field-meta.xml
<CustomField>
    <fullName>JU_tokuisakikentoubi__c</fullName>
    <label>得意先検討日</label>
    <type>Date</type>
</CustomField>