force-app/main/default/objects/Opportunity/fields/Ju_tokuisakisansyo__c.field-meta.xml
<CustomField>
    <fullName>Ju_tokuisakisansyo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Department__c</field>
            <operation>equals</operation>
            <valueField>Account.Department__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>商談</relationshipLabel>
    <relationshipName>sho_tokuisakitan</relationshipName>
    <type>Lookup</type>
</CustomField>