force-app/main/default/objects/Opportunity/fields/JU_TrialDate__c.field-meta.xml
<CustomField>
    <fullName>JU_TrialDate__c</fullName>
    <label>トライアル日</label>
    <type>Date</type>
</CustomField>