force-app/main/default/objects/Opportunity/fields/JU_waritsukesekisanteian__c.field-meta.xml
<CustomField>
    <fullName>JU_waritsukesekisanteian__c</fullName>
    <defaultValue>false</defaultValue>
    <label>割付積算提案</label>
    <type>Checkbox</type>
</CustomField>